[tool.poetry]
name = "lagos-learn-api"
version = "0.1.0"
description = ""
authors = ["Godswill Umukoro <umukro6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
